--- a/Sweavetest/inst/sample/FullReportTemplate.Rnw
+++ b/Sweavetest/inst/sample/FullReportTemplate.Rnw
@@ -17,20 +17,21 @@
 \newcommand{\R}{$^\mbox{\scriptsize\textregistered}$}
 
 <<>>=
-#The User Should Modify These Variables To Suit Their Needs
+#The user should modify these variables to suit their needs
 set.seed(18)
 library(Sweavetest)
-library(tables)
-setwd("C:/Users/Adam Rahman/Desktop/Summer Project/Test Templates")
-Version <- version("Teacher")
-testversion <- 4
-NumberOfVersions <- 4
 
-if(Version == "Report"){
-  scanex <- readScanex("fakescans.dat")
-}
+with(.STEnv, {
+  Version <- version("Teacher")
+  testversion <- 4
+  NumberOfVersions <- 4
 
-Initialization(Version = Version)
+  if(Version == "Report"){
+    # Replace the system.file call with a filename of Scanex results
+    scanex <- readScanex(system.file("sample/sample.dat", package="Sweavetest"))
+  }  
+})
+Initialization()
 @
 
 \pagestyle{myheadings}
@@ -38,7 +39,7 @@ Initialization(Version = Version)
 \newcounter{myitem}
 \hyphenation{Scantron}
 
-\markright{"Your Class Name Here" Exam \Sexpr{versioncodes[testversion]}}
+\markright{"Your Class Name Here" Exam \Sexpr{with(.STEnv, versioncodes[testversion])}}
 
 \begin{document}
 
@@ -59,7 +60,7 @@ StatisticalOverview(GradedTests,KR,FD,fignum)
 @
 
 \begin{center}
-\fbox{\bf EXAM CODE \Sexpr{ExamNum[testversion]}}
+\fbox{\bf EXAM CODE \Sexpr{with(.STEnv, ExamNum[testversion])}}
 \end{center}
 \vspace{0.5in}
 
@@ -76,7 +77,7 @@ INSTRUCTIONS:
 
 \item { Fill in NAME, INSTRUCTOR, SIGNATURE and COURSE  on the {Scantron} sheet.}
 
-\item { Fill in and {\bf code} your STUDENT NUMBER, SECTION and EXAM CODE on the Scantron sheet.  Your EXAM CODE is  \Sexpr{ExamNum[testversion]}.  }
+\item { Fill in and {\bf code} your STUDENT NUMBER, SECTION and EXAM CODE on the Scantron sheet.  Your EXAM CODE is  \Sexpr{with(.STEnv, ExamNum[testversion])}.  }
 
 \item { Leave the ANSWER SHEET NUMBER blank on the Scantron sheet.}
 
