Convert fignum to getter/setter

--- a/Sweavetest/inst/sample/FullReportTemplate.Rnw
+++ b/Sweavetest/inst/sample/FullReportTemplate.Rnw
@@ -53,7 +53,7 @@ Saturday, October 15, 2011, 10:00 AM - noon \\
 \end{center}
 
 <<>>=
-StatisticalOverview(GradedTests,KR,FD,fignum)
+StatisticalOverview(GradedTests,KR,FD)
 @
 
 \begin{center}
