Drop last of getglobals.  The DR, ID and PB tests could be improved (they grab a full matrix, then pick out columns; why not just grab those columns?)

--- a/Sweavetest/vignettes/Sweavetest.Rnw
+++ b/Sweavetest/vignettes/Sweavetest.Rnw
@@ -1155,7 +1155,7 @@ Update this list as we cover things.
 Still need to document
 
  [1]          "answerMatrix"        "clean"             
- [6]          "getglobal"          "grades"                              
+ [6]          "grades"                              
 [16] "nominalRoll"        "perms"                "readScanex"           
 
 
