--- a/Sweavetest/inst/sample/SampleTest.Rnw
+++ b/Sweavetest/inst/sample/SampleTest.Rnw
@@ -16,8 +16,8 @@
 <<>>=
 set.seed(18)
 library(Sweavetest)  # Should come after set.seed, to make reproducible.
-Initialization("SampleTest", "Student")
-testversion(2)
+Initialization("SampleTest", "Report", scanex="sample.dat")
+testversion(1)
 @
 
 \pagestyle{myheadings}
